--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   carousel_slider: ^1.3.1
   http: 0.12.0+2
-  #audioplayers: ^0.14.0
-  audioplayers:
-    path: C:\audioplayers-0.14.0
+  audioplayers: 0.14.0
+  #audioplayers:
+  #  path: C:\audioplayers-0.14.0
   sliding_up_panel: ^0.3.6
   #flutter_media_notification: ^1.2.6
   sqflite: 1.2.0
